   existing configuration.
 * src/editor.c, src/sciwrappers.c, src/sciwrapper.h:
   Make editor_highlight_braces() static.
   Remove unused wrapper functions.
 * src/editor.c, src/symbols.c, src/symbols.h:
   Prevent showing an empty macro list.
   Show only macros of the same filetype instead of all macros of all
   loaded filetypes.


2009-04-07  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/editor.c:
   Add Configuration Files item for snippets.conf.
 * src/highlighting.c, src/symbols.c:
   Fix 2 old uses of filetype IDs.


2009-04-06  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/interface.c, src/printing.c, geany.glade:
   Minor string improvements (spotted by Jean-Philippe Moal, thanks).


2009-04-05  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/ui_utils.c:
   Add sanity checks in ui_lookup_widget() just to be safe.
 * THANKS, TODO, geany.glade, src/about.c, src/interface.c,
   src/keyfile.c, src/main.c, src/plugindata.h, src/project.c,
   src/project.h, src/ui_utils.c, src/ui_utils.h:
   Add "Recent Projects" menu to the Project menu
   (#2728630, patch by Elias Pschernig, thanks).
 * doc/geany.txt, doc/geany.html:
   Describe how to build Geany using the Waf build system.
 * src/build.c, src/callbacks.c, src/dialogs.c, src/document.c,
   src/document.h, src/editor.c, src/encodings.c, src/filetypes.c,
   src/geanymenubuttonaction.c, src/geanyobject.c, src/geanywraplabel.c,
   src/highlighting.c, src/keybindings.c, src/keyfile.c, src/log.c,
   src/main.c, src/msgwindow.c, src/navqueue.c, src/notebook.c,
   src/plugins.c, src/prefs.c, src/queue.c, src/sciwrappers.c,
   src/socket.c, src/symbols.c, src/templates.c, src/toolbar.c,
   src/tools.c, src/tools.h, src/treeviews.c, src/ui_utils.c,
   src/utils.c, src/utils.h, src/vte.c:
   Start using G_LIKELY/G_UNLIKELY macros to gain a little more
   performance when building the code with gcc.
 * src/highlighting.c: